Rebase on Tomcat EL (the current EL was improved to pass the TCK, but does not have fixes for complex things).